Some Minor Changes in UI

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </nav>
 
-  <!--Showcase and Search Box-->
+  <!--Showcase-->
 
   <section class="bg-dark text-light">
     <div class="container">
@@ -102,45 +102,6 @@
         </div>
       </section>
       </div>
-      
-
-    <!--Contributors-->
-  
-  <section class="p-5">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md">
-        <img class="card-img-top" src="img_avatar1.png" alt="Card image">
-        <div class="card-body">
-          <h5 class="card-title">Contributors</h5>
-          <p class="card-text">Montek Singh</p>
-          <a href="#" class="btn btn-primary">View Profile</a>
-        </div>
-      </div>
-      <div class="col-md">
-        <div class="card-body">
-          <h5 class="card-title">Contributors</h5>
-          <p class="card-text">Nitigya Gurung</p>
-          <a href="#" class="btn btn-primary">View Profile</a>
-        </div>
-      </div>
-      <div class="col-md">
-        <div class="card-body">
-          <h5 class="card-title">Contributors</h5>
-          <p class="card-text">Vinay Juluri</p>
-          <a href="#" class="btn btn-primary">View Profile</a>
-        </div>
-      </div>
-      <div class="col-md">
-        <div class="card-body">
-          <h5 class="card-title">Contributors</h5>
-          <p class="card-text">Tharun</p>
-          <a href="#" class="btn btn-primary">View Profile</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  </section>
 
   <!--FOOTER-->
   <footer>
