some minor fixes

--- a/search.html
+++ b/search.html
@@ -36,7 +36,10 @@
         <div class="card">
             <div class="card-body p-md-3">
               <h4 class="card-title">Search Results</h4>
-              <p class="card-text">Pfizer</p><a href="#" class="card-link">Book Appointment</a>
+              <p class="card-text">Pfizer</p>
+              <p id="demo1"></p>
+              <p id="demo2"></p>
+              <a href="#" class="card-link">Book Appointment</a>
             </div>
           </div>
       </div>
