search form validation

--- a/search.html
+++ b/search.html
@@ -37,8 +37,9 @@
             <div class="card-body p-md-3">
               <h4 class="card-title">Search Results</h4>
               <p class="card-text">Pfizer</p>
-              <p id="demo1"></p>
-              <p id="demo2"></p>
+              <div class="spinner-border" role="status"><span class="visually-hidden">Loading...</span></div>'
+              <p id="pin"></p>
+              <p id="district"></p>
               <a href="#" class="card-link">Book Appointment</a>
             </div>
           </div>
