--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
   <!--Nav Bar-->
@@ -39,16 +40,19 @@
       <div>
         <h2>Book Your <span class="text-danger">Vaccination Today</span></h2>
         <div class="container bg-light p-5">
-          <form action="search.html">
+          <form action="search.html" onsubmit="return searchValidation()">
               <div class="row">
                 <div class="col">
-                  <input type="text" class="form-control" placeholder="PIN Code" aria-label="PIN Code" id="PIN" name="PIN">
+                  <input type="text" class="form-control" placeholder="PIN Code" aria-label="PIN Code" id="PIN" name="PIN" autocomplete="off">
+                  <span id="pin_code" class="text-danger" font-weight="bold"></span>
                 </div>
                 <div class="col">
-                  <input type="text" class="form-control" placeholder="District Code" aria-label="District Code" id="dis" name="dis">
+                  <input type="text" class="form-control" placeholder="District Code" aria-label="District Code" id="dis" name="dis" autocomplete="off">
+                  <span id="District" class="text-danger" font-weight="bold"></span>
                 </div>
                 <div class="col">
-                  <button class="btn btn-danger">Search</a>
+                  <button class="btn btn-danger" id="searchbtn" class="text-danger">Search
+                 </div>
                 </div>
               </div>
             </form>
@@ -80,7 +84,7 @@
                How does the virus spread?
               </button>
             </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+            <div id="flush-collapseTwo" class="accordion-collapse aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">COVID-19 spreads when an infected person breathes out droplets and very small particles that contain the virus. These droplets and particles can be breathed in by other people or land on their eyes, noses, or mouth. In some circumstances, they may contaminate surfaces they touch. People who are closer than 6 feet from the infected person are most likely to get infected.
 
                 COVID-19 is spread in three main ways:
@@ -111,7 +115,7 @@
       <p class="m-3">&copy; University of East London - all rights reserved</p>
     </div>
   </footer>
-
+<script src="js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
